--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title></title>
+    <style type="text/css">
+      body {
+          background-color: #728EA5;
+          font-family: Georgia, "Times New Roman",
+            Times, serif;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
