--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title></title>
     <style type="text/css">
       body {
-          background-color: #728EA5;
+          /* background-color: lightgrey; */
           font-family: Georgia, "Times New Roman",
             Times, serif;
       }
